@@ -1,3 +1,8 @@
+2009-01-22  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-applet.c: Rewrite of the applet, now using GObject.
+	Also, fix the icon on transparent panels, closes #568674.
+
 2009-01-21  Jonh Wendell <jwendell@gnome.org>
 
 	* configure.ac: post-release bump to 2.25.90
